fix(material-experimental): strong focus indicator clipped in checkbox and radio button (#19423)
In order to support density scaling, the MDC checkbox and radio button have `border-radius: 50%` on their ripple element which is also used as the strong focus indicator. Since the indicator is a square, it'll be clipped, unless we also make it into a circle.

--- a/src/material-experimental/mdc-helpers/_focus-indicators.scss
+++ b/src/material-experimental/mdc-helpers/_focus-indicators.scss
@@ -57,6 +57,13 @@
     margin: 5px;
   }
 
+  // These components have to set `border-radius: 50%` in order to support density scaling
+  // which will clip a square focus indicator so we have to turn it into a circle.
+  .mat-mdc-checkbox-ripple.mat-mdc-focus-indicator::before,
+  .mat-radio-ripple.mat-mdc-focus-indicator::before {
+    border-radius: 50%;
+  }
+
   // Render the focus indicator on focus. Defining a pseudo element's
   // content will cause it to render.
 
